--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ relative_permalinks: true
 title: "Aşkın Gedik"
 tagline: "askn@askngdk:~$"
 description: "Aşkın'ın Web Günlüğü"
-url: http://askn.github.com
+url: http://askingedik.net
 baseurl: /
 paginate: 13
 
